--- a/springMyStore/src/main/resources/application.properties
+++ b/springMyStore/src/main/resources/application.properties
@@ -2,7 +2,7 @@ security.basic.enabled=false
 server.contextPath=/api
 server.port=9898
 
-
+#MySQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
@@ -11,4 +11,3 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.initialization-mode=always
 spring.datasource.initialize=true
-
