--- a/springMyStore/pom.xml
+++ b/springMyStore/pom.xml
@@ -19,6 +19,21 @@
 	</properties>
 
 	<dependencies>
+		
+       <dependency>
+	<groupId>org.projectlombok</groupId>
+	<artifactId>lombok</artifactId>
+	<optional>true</optional>
+</dependency>
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-actuator</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>com.h2database</groupId>
+		<artifactId>h2</artifactId>
+		<scope>runtime</scope>
+	</dependency>
         <dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
@@ -59,6 +74,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+	
+   <dependency>
+     <groupId>org.apache.velocity</groupId>
+     <artifactId>velocity</artifactId>
+     <version>1.7</version>
+   </dependency>
+		
 	</dependencies>
 
 	<build>
